<resources>
    <string name="app_name">SOB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_login">Login</string>
    <string name="str_signup">Signup</string>
    <string name="str_reset_password">Reset Password</string>
    <string name="str_welcome">Welcome!</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_don_t_have_an_account">Don\'t have an account?</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_phone">Phone</string>
    <string name="str_address">Address</string>
    <string name="str_home">Home</string>
    <string name="str_category">Category</string>
    <string name="str_sell">Sell</string>
    <string name="str_account">Account</string>
    <string name="str_whishlist">Whishlist</string>
    <string name="str_todo">TODO</string>
    <string name="str_chats">Chats</string>
    <string name="str_categories">Categories</string>
    <string name="str_brands">Brands</string>
    <string name="str_products">PRODUCTS</string>
    <string name="str_recently">RECENT</string>
    <string name="str_men">Men</string>
    <string name="str_product_name">Product Name</string>
    <string name="str_Terms_and_Condition">Terms and Condition</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_i_agree_with_the">I agree with the</string>
    <string name="str_terms_and_conditions">Terms and Conditions</string>
    <string name="str_already_have_an_account">Already have an account?</string>
    <string name="str_reset_your_password">Reset Your Password</string>
    <string name="str_back_to_login">Back to login</string>
    <string name="str_referral_code">Referral Code(Optional)</string>
    <string name="str_rs_500">RS 500$</string>
    <string name="str_location">Location</string>
    <string name="str_become_a_seller">Become a Seller</string>
    <string name="str_seller_panel">Seller Panel</string>
    <string name="str_my_addresses">My Addresses</string>
    <string name="str_about_us">About Us</string>
    <string name="str_account_setting">Account Setting</string>
    <string name="str_notification">Notification</string>
    <string name="str_contact_us">Contact Us</string>
    <string name="str_ratting_the_app">Ratting the App</string>
    <string name="str_privacy">Privacy</string>
    <string name="str_in_stock">In Stock: </string>
    <string name="str_maddie_brown">Maddie Brown</string>
    <string name="Str_date">30-02-22</string>
    <string name="str_dresses">Dresses</string>
    <string name="str_activate">Activate</string>
    <string name="str_sign_out">Sign Out</string>
    <string name="str_women">Women</string>
    <string name="str_sort_by">Sorted By</string>
    <string name="str_filter">Filter</string>
    <string name="str_add_product">ADD PRODUCT</string>
    <string name="str_enter_price">Enter Price</string>
    <string name="str_enter_title">Enter Title</string>
    <string name="str_enter_purchase_price">Enter Prize</string>
    <string name="str_enter_city">Enter City</string>
    <string name="str_select_colour">Select colour</string>
    <string name="str_enter_neighborhood">Enter location</string>
    <string name="str_enter_total_items">Enter total item</string>
    <string name="str_enter_detail_description">Enter description</string>
    <string name="str_search_keywords">Search Keywords</string>
    <string name="str_product_details">Product Details</string>
    <string name="str_black_leather_belt">BLack balt</string>
    <string name="str__76_31">£76.31</string>
    <string name="str_lahore_thokar_niaz_baigh">lahore thokar niaz baig</string>
    <string name="str_availability">Availability:-  </string>
    <string name="str_out_of_stock">Out of stock</string>
    <string name="str_product_detail">Product Details</string>
    <string name="str_type">Type</string>
    <string name="str_condition">Condition</string>
    <string name="str_sizes">Sizes</string>
    <string name="str_color">Colours</string>
    <string name="str_description">Description</string>
    <string name="str_seller_details">Seller Details</string>
    <string name="str_hafiz_sajjad_motor">Khadijah Jutt</string>
    <string name="str_member_since_jan_2017">member since 2022</string>
    <string name="str_chat_with_seller">Chat with seller</string>
    <string name="str_my_account">Account</string>
    <string name="str_username">usrname</string>
    <string name="str_phone_number">phone no</string>
    <string name="str_gender">gender</string>
    <string name="str_update_profile">"SAVE "</string>
    <string name="str_enter_valid_name">Enter a valid name</string>
    <string name="str_enter_valid_email_address">Enter a valid email address</string>
    <string name="str_enter_valid_phone">Enter a valid phone number</string>
    <string name="str_enter_valid_username">Please enter a valid username</string>
    <string name="str_enter_valid_password_policy">Password should be minimum 6 characters long</string>
    <string name="str_enter_valid_address">Enter a valid address</string>
    <string name="str_signup_successfully">Signup Successfully</string>
    <string name="permission_required">Permission required for app to work properly</string>
    <string name="str_enter_product_description">Enter product description</string>
    <string name="str_add_brand">ADD BRAND</string>
    <string name="str_add_category">ADD CATEGORY</string>
    <string name="str_invalid_field">Invalid field</string>
    <string name="str_please_wait">Please Wait</string>
    <string name="str_file_uploading">file is uploading</string>
    <string name="str_select_brand">Select Brand</string>
    <string name="str_in_use">In Use</string>
    <string name="str_new">New</string>
    <string name="str_notification_fragment">Notification Fragment</string>
    <string name="str_messages">Messages</string>
    <string name="str_no_recently_chat">No Recently Chat</string>
    <string name="str_chat_fragment">Chat Fragment</string>
    <string name="str_message_fragment">Message Fragment</string>
    <string name="str_enter_message_here">Enter message here...</string>
    <string name="str_this_is_receiver_message">this is receiver message</string>
    <string name="str_this_is_sender_message">this is sender message</string>
    <string name="str_nothing_found">Nothing Found</string>
</resources>