<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.horizam.skbhub.Fragments.LoginFragment"
        android:label="@string/str_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_register_Fragment"
            app:destination="@id/register_Fragment" />
        <action
            android:id="@+id/action_loginFragment_to_reset_pass_Fragment"
            app:destination="@id/reset_pass_Fragment" />
    </fragment>
    <fragment
        android:id="@+id/register_Fragment"
        android:name="com.horizam.skbhub.Fragments.RegisterFragment"
        android:label="@string/str_signup"
        tools:layout="@layout/fragment_register"/>
    <fragment
        android:id="@+id/reset_pass_Fragment"
        android:name="com.horizam.skbhub.Fragments.ResetPasswordFragment"
        android:label="@string/str_reset_password"
        tools:layout="@layout/fragment_reset_password"/>
</navigation>