<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_120sdp"
    android:layout_marginLeft="@dimen/_15sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_15sdp"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_12sdp"
    app:cardMaxElevation="@dimen/_8sdp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground">
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_toEndOf="@id/iv_image"
            android:src="@drawable/img_view" />
        <TextView
            android:id="@+id/tv_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_38sdp"
            android:layout_toEndOf="@id/iv_image"
            android:text=": 77"
            android:textColor="@color/black" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:background="@color/purple_800">
            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_3sdp"
                android:text="@string/str_activate"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>
        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_65sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:contentDescription="@string/str_todo"
            android:scaleType="centerCrop"
            android:src="@drawable/img_product_placeholder" />
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_toEndOf="@id/iv_image"
            android:text="@string/str_maddie_brown"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />
        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:contentDescription="@string/str_todo"
            android:padding="@dimen/_7sdp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_more" />
        <TextView
            android:id="@+id/tv_no_of_stock_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/str_rs_500"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_toStartOf="@+id/tv_no_of_stock_item"
            android:text="@string/str_in_stock"
            android:textColor="@color/purple_800"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_toEndOf="@+id/iv_image"
            android:text="@string/str_rs_500"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp" />
        <TextView
            android:id="@+id/tv_address"
            android:layout_toEndOf="@+id/iv_image"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="@dimen/_10sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/str_location"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/iv_menu"
            android:textSize="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/Str_date"
            android:layout_marginEnd="@dimen/_10sdp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>