<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.NotificaitonFragment">
    <RelativeLayout
        android:id="@+id/tab_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/back_IV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_15ssp"
            android:visibility="gone"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/str_todo"
            android:focusable="true"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_back" />
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/str_notification"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/search"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_18sdp"
            android:visibility="gone"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/str_todo"
            android:focusable="true"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_search_gray" />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_no_data_available"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/str_nothing_found"
        android:textSize="@dimen/_14ssp"
        android:visibility="visible" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_notification"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/tab_bar"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>