<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CategoryFragment">

    <RelativeLayout
        android:id="@+id/tab_bar"
        android:background="@color/purple_800"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <ImageView
            android:id="@+id/back_IV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_15ssp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/str_todo"
            android:focusable="true"
            android:padding="@dimen/_7sdp"
            android:visibility="gone"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/str_category"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_18sdp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/str_todo"
            android:focusable="true"
            android:visibility="gone"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_search_gray" />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_no_data_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        android:text="@string/str_nothing_found"
        android:textSize="@dimen/_14ssp"
        android:visibility="gone" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_below="@id/tab_bar"/>


</RelativeLayout>